// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Temp] render renders without crashing 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "column",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      activeOpacity={0.5}
      onPress={[Function]}
      testID="btn-back"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#393D7A",
              "borderColor": "#393D7A",
              "borderRadius": 4,
              "borderWidth": 2,
              "height": 52,
              "justifyContent": "center",
              "width": 320,
            },
            Object {
              "backgroundColor": "#333333",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#D3D8E8",
                "fontSize": 14,
              },
            ]
          }
        >
          GO BACK
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Temp] render should render [Dark] theme 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#232323",
          "flexDirection": "column",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      activeOpacity={0.5}
      onPress={[Function]}
      testID="btn-back"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#E0E0E0",
              "borderColor": "#E0E0E0",
              "borderRadius": 4,
              "borderWidth": 2,
              "height": 52,
              "justifyContent": "center",
              "width": 320,
            },
            Object {
              "backgroundColor": "#333333",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontSize": 14,
              },
            ]
          }
        >
          GO BACK
        </Text>
      </View>
    </View>
  </View>
</View>
`;
